# gdal-compare

./: Cargo.toml  README.md
data/: new_bands_diff.tif  new_bands_equals.tif  new_blocks_4_3.asc  new_blocks_diff.asc  new_blocks_double.asc  new_data_diff.asc  new_diff.asc  new_diff.prj  new_spatial_ref_equal.prj  new_type_diff.asc  result.asc.aux.xml  world.tif
src/: lib.rs
